--- a/public/css/style_admin.css
+++ b/public/css/style_admin.css
@@ -24,6 +24,13 @@
 }
 /* ===============================================================================*/
 
+/* Estilo de la clase de errores del formulario */
+.errores_formulario_v {
+  color: red;
+}
+
+/* ===============================================================================*/
+
 html {
   box-sizing: border-box;
   overflow-x: hidden;
