--- a/src/views/partials/paquete.ejs
+++ b/src/views/partials/paquete.ejs
@@ -1,7 +1,7 @@
 <article id="<%= paquete.package_id%>">
     <figure class="product_image">
         <a href="/productDetail/<%= paquete.package_id %>">
-            <img class='llenar' src='/images/<%= paquete.package_image ? paquete.package_image: 'default.png' %>' alt='<%= paquete.package_alt_image%>' >
+            <img src='/images/<%= paquete.package_image ? paquete.package_image: 'default.png' %>' alt='<%= paquete.package_alt_image%>' >
         </a>  
     </figure>
     <p class="descripcion"><strong><%= paquete.package_title%></strong></p>    
