--- a/src/views/products/package_crear.ejs
+++ b/src/views/products/package_crear.ejs
@@ -1,45 +1,18 @@
-<!-- Datos a cargar en el formulario para el alta de un paquete
- DB_packages
-.package_id: numerico
-.package_name: string - nombre interno que le da al paquete
-.package_image: string - imagen jpg, pgn, web, que se utilizara para promocionar el paquete
-.package_alt_image: string - descripcion de la imagen para cuando no se cargue
-.package_price: numerico - precio de venta del paquete
-.package_title: string - es el titulo del paquete para los clientes
-.package_q_days: numerico - son la cantidad de noches del viaje
-.package_hotel: string - Nombre del hotel
-.package_stars_hotel: numerico - cantidad de estrellas del Hotel
-.package_description: string - descripcion del paquete
-.package_date_admission: date - fecha de ingreso al hotel
-.package_index: boolean - true o false si va en la vidriera del home
-.package_category: numerico - 1-paquete regular, 2-paquete en oferta
-.package_transportation: numerico - 1-aereo, 2-bus, 3-sin transporte incluido
-.package_excursions_id: numerico - 0 - indica que no tiene excursiones incluidas en el paquete
-.package_discount: numerico - porcentaje de descuento en el precio del paquete.
-==================================================================================================
--->
 
 <%- include('../partials/head') %>
 <body>
     <%- include('../partials/header_admin') %>
 
     <!-- Formulario -->
-    <form action="/admin/crear" method="POST" class="create_form" enctype="multipart/form-data" id="form_crear">
-        <h3>Formulario para crear un paquete turistico</h3>
-        <div class="control_formulario">
-            <label>package_id: </label>
-            <input type="number" name="package_id" class="control <%= locals.errors && errors.package_id ? 'is_invalid' : null %>"
-                value="<%= locals.old_data ? old_data.package_id : null %>"
-                placeholder="codigo paquete" minlength="1" maxlength="4" size="13">
-                <% if (locals.errors && errors.package_id) { %>
-                    <div class="text_error">
-                        <%= errors.package_id.msg %> 
-                    </div> 
-                <% } %>
-        </div>
+    
+    <form action="/admin/crear" method="POST" class="producto_v create_form" enctype="multipart/form-data" id="form_crear">
+        <h3>Formulario para crear un paquete turistico</h3> 
+        <div class="errores">
+            <ul class="errores_formulario_v"></ul>
+        </div>    
         <div class="control_formulario">
             <label>package_name: </label>
-            <input type="text" name="package_name" class="control <%= locals.errors && errors.package_name ? 'is_invalid' : null %>"
+            <input type="text" name="package_name" class="name_v control <%= locals.errors && errors.package_name ? 'is_invalid' : null %>"
                 value="<%= locals.old_data ? old_data.package_name : null %>"
                 placeholder="nombre del paquete" maxlength="32" size="32">
                 <% if (locals.errors && errors.package_name) { %>
@@ -49,9 +22,9 @@
                 <% } %>
             </div>
         <div class="control_formulario">
-            <label>package_image: </label>
+            <label class="imagen_v">package_image: </label>
             <input type="file" name="turisteando_image" id="turisteando_image" accept= ".jpeg, .png, .webp" 
-                    class="control" value="<%= locals.old_data ? old_data.turisteando_image : null %>">
+                    class="image_v control" value="<%= locals.old_data ? old_data.turisteando_image : null %>">
                 <% if (locals.errors && errors.turisteando_image) { %>
                     <div class="text_error">
                         <%= errors.turisteando_image.msg %> 
@@ -61,7 +34,7 @@
         </div>
         <div class="control_formulario">
             <label>package_alt_image: </label>
-            <input type="text" name="package_alt_image" class="control <%= locals.errors && errors.package_alt_image ? 'is_invalid' : null %>"
+            <input type="text" name="package_alt_image" class="alt_image_v control <%= locals.errors && errors.package_alt_image ? 'is_invalid' : null %>"
                     value="<%= locals.old_data ? old_data.package_alt_image : null %>" 
                     placeholder="descrpción alternativa de la imagen" size="32">
                 <% if (locals.errors && errors.package_alt_image) { %>
@@ -72,7 +45,7 @@
         </div>
         <div class="control_formulario">
             <label>package_price: </label>
-            <input type="number" name="package_price" class="control <%= locals.errors && errors.package_price ? 'is_invalid' : null %>"
+            <input type="number" name="package_price" class="price_v control <%= locals.errors && errors.package_price ? 'is_invalid' : null %>"
                     value="<%= locals.old_data ? old_data.package_price : null %>" 
                     placeholder="precio" maxlength="10" size="10">
                 <% if (locals.errors && errors.package_price) { %>
@@ -83,9 +56,9 @@
         </div>
         <div class="control_formulario">
             <label>package_title: </label>
-            <input type="text" name="package_title" class="control <%= locals.errors && errors.package_title ? 'is_invalid' : null %>"
+            <input type="text" name="package_title" class="title_v control <%= locals.errors && errors.package_title ? 'is_invalid' : null %>"
                     value="<%= locals.old_data ? old_data.package_title : null %>" 
-                    placeholder="titulo para la agencia" size="32">
+                    placeholder="descrpción alternativa de la imagen" size="32">
                 <% if (locals.errors && errors.package_title) { %>
                     <div class="text_error">
                         <%= errors.package_title.msg %> 
@@ -94,7 +67,7 @@
         </div>
         <div class="control_formulario">
             <label>package_q_days: </label>
-            <input type="number" name="package_q_days" class="control <%= locals.errors && errors.package_q_days ? 'is_invalid' : null %>" 
+            <input type="number" name="package_q_days" class="q_days_v control <%= locals.errors && errors.package_q_days ? 'is_invalid' : null %>" 
                     value="<%= locals.old_data ? old_data.package_q_days : null %>" 
                     placeholder="cantidad de días" minlength="1" size="17">
                 <% if (locals.errors && errors.package_q_days) { %>
@@ -104,20 +77,18 @@
                 <% } %>
         </div>
         <div class="control_formulario">
-            <label>package_hotel: </label>
-            <input type="text" name="package_hotel" class="control <%= locals.errors && errors.package_hotel ? 'is_invalid' : null %>"
-                    value="<%= locals.old_data ? old_data.package_hotel : null %>" 
-                    placeholder="nombre del hotel" size="32">
-                <% if (locals.errors && errors.package_hotel) { %>
-                    <div class="text_error">
-                        <%= errors.package_hotel.msg %> 
-                    </div> 
+            <label for='hoteles'>package_hotel: </label>
+            <select name="package_hotel" id="hoteles">
+                <% for (let hotel of lista_hoteles) {%>
+                    <option value="<%= hotel.id %>"
+                            <%= locals.old_data && old_data.package_hotel == hotel.id ? 'selected' : null %>><%= hotel.nombre %></option>
                 <% } %>
+            </select>
         </div>
         
         <div class="control_formulario">
             <label>package_description: </label>
-            <textarea name="package_description" class="control <%= locals.errors && errors.package_description ? 'is_invalid' : null %>"
+            <textarea name="package_description" class="description_v control <%= locals.errors && errors.package_description ? 'is_invalid' : null %>"
                     ><%= locals.old_data ? old_data.package_description : null %></textarea>
                 <% if (locals.errors && errors.package_description) { %>
                     <div class="text_error">
@@ -128,7 +99,7 @@
         <div class="control_formulario">
             <label>package_date_admission: </label>
             <input type="date" name="package_date_admission" 
-                    class="control <%= locals.errors && errors.package_date_admission ? 'is_invalid' : null %>"
+                    class="date_admission_v control <%= locals.errors && errors.package_date_admission ? 'is_invalid' : null %>"
                     value="<%= locals.old_data ? old_data.package_date_admission : null %>" >
                 <% if (locals.errors && errors.package_date_admission) { %>
                     <div class="text_error">
@@ -160,21 +131,18 @@
                 <%= locals.old_data && old_data.package_transportation === "3" ? 'checked' : null %>></label>
         </div>
         <div class="control_formulario">
-            <label>package_excursions_id: </label>
-            <input type="number" name="package_excursions_id"
-                    class="control <%= locals.errors && errors.package_excursions_id ? 'is_invalid' : null %>" 
-                    value="<%= locals.old_data ? old_data.package_excursions_id : null %>" 
-                    placeholder="codigo excursiones" minlength="1" size="18">
-                <% if (locals.errors && errors.package_excursions_id) { %>
-                    <div class="text_error">
-                        <%= errors.package_excursions_id.msg %> 
-                    </div> 
+            <label for='excurciones'>package_excursions_id: </label>
+            <select name="package_excursions_id" id="excursiones">
+                <% for (let excursion of lista_excursiones) {%>
+                    <option value="<%= excursion.id %>"
+                        <%= locals.old_data && old_data.package_excursions_id == excursion.id ? 'selected' : null %>><%= excursion.name %></option>
                 <% } %>
+            </select>
         </div>
         <div class="control_formulario">
             <label>package_discount: </label>
             <input type="number" name="package_discount" 
-                    class="control <%= locals.errors && errors.package_discount ? 'is_invalid' : null %>"
+                    class="discount_v control <%= locals.errors && errors.package_discount ? 'is_invalid' : null %>"
                     value="<%= locals.old_data ? old_data.package_discount : null %>" 
                     placeholder="descuento" maxlength="10" size="10">
                 <% if (locals.errors && errors.package_discount) { %>
