--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -19,4 +19,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/a2385b59a3.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="/images/favicon-bg.png"> <!--logo en la pestaña del navegador-->
+
+    <script src="/js/validator_paquete.js"></script>
 </head>
